docs: add documentation for update Opening
